--- a/index.html
+++ b/index.html
@@ -1,98 +1,56 @@
-
 <!DOCTYPE html>
 <html lang="uk">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Фінансова Грамотність: Стратегія Успіху</title>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-  <style>
-    body {
-      font-family: 'Roboto', sans-serif;
-      margin: 0;
-      padding: 0;
-      line-height: 1.6;
-      color: #333;
-      background-color: #fafafa;
-    }
-    header {
-      background: url('https://images.unsplash.com/photo-1621263764928-8722c6a6ef33') no-repeat center center/cover;
-      height: 50vh;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      color: #fff;
-      text-shadow: 0px 4px 10px rgba(0, 0, 0, 0.7);
-    }
-    header h1 {
-      font-size: 3rem;
-      text-align: center;
-    }
-    main {
-      max-width: 900px;
-      margin: 40px auto;
-      padding: 20px;
-      background: #fff;
-      border-radius: 10px;
-      box-shadow: 0 4px 20px rgba(0,0,0,0.1);
-    }
-    h2 {
-      color: #2c3e50;
-      margin-top: 40px;
-    }
-    p {
-      font-size: 1.1rem;
-      margin-bottom: 20px;
-    }
-    blockquote {
-      font-style: italic;
-      background: #f4f4f4;
-      padding: 15px 20px;
-      border-left: 5px solid #2c3e50;
-      margin: 30px 0;
-    }
-    img {
-      width: 100%;
-      border-radius: 10px;
-      margin: 20px 0;
-    }
-    footer {
-      text-align: center;
-      padding: 20px;
-      background: #2c3e50;
-      color: #fff;
-      margin-top: 50px;
-    }
-  </style>
+  <title>Фінансові Статті</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <header>
+    <h1>📚 Фінансова Грамотність</h1>
+    <p>Оберіть статтю та дізнайтесь більше!</p>
+  </header>
 
-<header>
-  <h1>Фінансова Грамотність: Стратегія Успіху</h1>
-</header>
+  <main class="articles">
+    <div class="card">
+      <img src="https://images.unsplash.com/photo-1556742393-d75f468bfcb0" alt="Інвестиції">
+      <h2>Як почати інвестувати</h2>
+      <p>Покроковий гайд для початківців: від вибору брокера до перших активів.</p>
+      <a href="article1.html" class="btn">Читати</a>
+    </div>
 
-<main>
-  <h2>Чому фінансова грамотність — це основа свободи</h2>
-  <p>Фінансова грамотність — це не просто вміння рахувати гроші. Це знання про те, як створювати капітал, управляти ризиками та планувати майбутнє. Сьогодні успішні люди не лише заробляють, а й розумно інвестують.</p>
-  
-  <blockquote>"Гроші люблять тишу і планування. Той, хто керує фінансами, керує своїм життям."</blockquote>
+    <div class="card">
+      <img src="https://images.unsplash.com/photo-1581091870622-1c77c824d0c4" alt="Бюджетування">
+      <h2>Мистецтво бюджетування</h2>
+      <p>Навчіться правильно планувати витрати та створювати фінансову подушку.</p>
+      <a href="article2.html" class="btn">Читати</a>
+    </div>
 
-  <img src="https://images.unsplash.com/photo-1553729459-efe14ef6055d" alt="Finance Image">
+    <div class="card">
+      <img src="https://images.unsplash.com/photo-1554224155-6726b3ff858f" alt="Пасивний дохід">
+      <h2>Пасивний дохід: міфи і правда</h2>
+      <p>Розбираємо реальні способи отримання пасивного доходу та ризики.</p>
+      <a href="article3.html" class="btn">Читати</a>
+    </div>
 
-  <h2>Кроки до фінансової свободи</h2>
-  <p>1. Відкладай щонайменше 10% свого доходу.<br>
-     2. Формуй фінансову подушку безпеки (3-6 місяців витрат).<br>
-     3. Інвестуй у себе: освіту, нові навички.<br>
-     4. Починай інвестувати в прості інструменти: ETF, облігації, криптовалюти з низьким ризиком.</p>
+    <div class="card">
+      <img src="https://images.unsplash.com/photo-1605902711622-cfb43c4437d1" alt="Криптовалюти">
+      <h2>Криптовалюти для новачків</h2>
+      <p>Що потрібно знати перед тим, як інвестувати у Bitcoin та інші монети.</p>
+      <a href="article4.html" class="btn">Читати</a>
+    </div>
 
-  <h2>Поради експертів</h2>
-  <p>Уоррен Баффет казав: <em>«Найкраща інвестиція — це інвестиція у власні знання»</em>. Якщо ти хочеш стати фінансово вільним, вчися аналізувати свої витрати та завжди думати на кілька кроків наперед.</p>
+    <div class="card">
+      <img src="https://images.unsplash.com/photo-1508387020649-2f8e7e5b57a0" alt="Фінансові помилки">
+      <h2>ТОП-10 фінансових помилок</h2>
+      <p>Як уникнути поширених помилок та зберегти свої заощадження.</p>
+      <a href="article5.html" class="btn">Читати</a>
+    </div>
+  </main>
 
-</main>
-
-<footer>
-  <p>© 2025 Фінансовий Бот | Твій гід у світі грошей</p>
-</footer>
-
+  <footer>
+    <p>© 2025 Фінансовий Асистент</p>
+  </footer>
 </body>
 </html>
