--- a/index.html
+++ b/index.html
@@ -3,54 +3,45 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Фінансові Статті</title>
+  <title>Фінансові статті</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
-    <h1>📚 Фінансова Грамотність</h1>
-    <p>Оберіть статтю та дізнайтесь більше!</p>
+    <h1>Фінансові поради</h1>
+    <p>Обирайте цікаву тему та вчіться керувати своїми фінансами професійно</p>
   </header>
 
-  <main class="articles">
-    <div class="card">
-      <img src="https://images.unsplash.com/photo-1556742393-d75f468bfcb0" alt="Інвестиції">
-      <h2>Як почати інвестувати</h2>
-      <p>Покроковий гайд для початківців: від вибору брокера до перших активів.</p>
-      <a href="article1.html" class="btn">Читати</a>
-    </div>
-
-    <div class="card">
-      <img src="https://images.unsplash.com/photo-1581091870622-1c77c824d0c4" alt="Бюджетування">
-      <h2>Мистецтво бюджетування</h2>
-      <p>Навчіться правильно планувати витрати та створювати фінансову подушку.</p>
-      <a href="article2.html" class="btn">Читати</a>
-    </div>
-
-    <div class="card">
-      <img src="https://images.unsplash.com/photo-1554224155-6726b3ff858f" alt="Пасивний дохід">
-      <h2>Пасивний дохід: міфи і правда</h2>
-      <p>Розбираємо реальні способи отримання пасивного доходу та ризики.</p>
-      <a href="article3.html" class="btn">Читати</a>
-    </div>
-
-    <div class="card">
-      <img src="https://images.unsplash.com/photo-1605902711622-cfb43c4437d1" alt="Криптовалюти">
-      <h2>Криптовалюти для новачків</h2>
-      <p>Що потрібно знати перед тим, як інвестувати у Bitcoin та інші монети.</p>
-      <a href="article4.html" class="btn">Читати</a>
-    </div>
-
-    <div class="card">
-      <img src="https://images.unsplash.com/photo-1508387020649-2f8e7e5b57a0" alt="Фінансові помилки">
-      <h2>ТОП-10 фінансових помилок</h2>
-      <p>Як уникнути поширених помилок та зберегти свої заощадження.</p>
-      <a href="article5.html" class="btn">Читати</a>
-    </div>
+  <main class="articles-grid">
+    <a href="article1.html" class="card">
+      <img src="https://images.unsplash.com/photo-1553729784-e91953dec042" alt="Фінансова свобода">
+      <h2>Фінансова свобода</h2>
+      <p>Дізнайтеся, як побудувати стабільне фінансове майбутнє.</p>
+    </a>
+    <a href="article2.html" class="card">
+      <img src="https://images.unsplash.com/photo-1526304640581-d334cdbbf45e" alt="Бюджет">
+      <h2>Планування бюджету</h2>
+      <p>Секрети ефективного планування та розподілу доходів.</p>
+    </a>
+    <a href="article3.html" class="card">
+      <img src="https://images.unsplash.com/photo-1542744173-8e7e53415bb0" alt="Інвестиції">
+      <h2>Перші кроки в інвестиціях</h2>
+      <p>З чого почати інвестування і як уникнути помилок.</p>
+    </a>
+    <a href="article4.html" class="card">
+      <img src="https://images.unsplash.com/photo-1559526324-593bc073d938" alt="Психологія грошей">
+      <h2>Психологія грошей</h2>
+      <p>Як наші емоції впливають на фінансові рішення.</p>
+    </a>
+    <a href="article5.html" class="card">
+      <img src="https://images.unsplash.com/photo-1605902711622-cfb43c4437b5" alt="Фінансові помилки">
+      <h2>Як уникнути фінансових помилок</h2>
+      <p>Розповідаємо про основні пастки у світі фінансів.</p>
+    </a>
   </main>
 
   <footer>
-    <p>© 2025 Фінансовий Асистент</p>
+    <p>© 2025 Фінансові поради</p>
   </footer>
 </body>
 </html>
