--- a/article1.html
+++ b/article1.html
@@ -3,39 +3,72 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Фінансова грамотність: Основи інвестування</title>
+  <title>Фінансова свобода: як досягти стабільності</title>
   <link rel="stylesheet" href="style.css">
+  <style>
+    .article-header {
+      background: linear-gradient(135deg, #007bff, #00c6ff);
+      color: white;
+      padding: 60px 20px;
+      text-align: center;
+    }
+
+    .article-header h1 {
+      font-size: 2.5rem;
+      margin: 0;
+    }
+
+    .article-content {
+      max-width: 900px;
+      margin: 40px auto;
+      padding: 0 20px;
+      line-height: 1.8;
+      font-size: 1.1rem;
+      color: #333;
+    }
+
+    .article-content img {
+      width: 100%;
+      border-radius: 12px;
+      margin: 20px 0;
+    }
+
+    .back-link {
+      display: block;
+      text-align: center;
+      margin: 40px auto;
+      font-size: 1.2rem;
+      text-decoration: none;
+      color: #007bff;
+      transition: color 0.3s;
+    }
+
+    .back-link:hover {
+      color: #0056b3;
+    }
+  </style>
 </head>
 <body>
-  <header>
-    <h1>Фінансова грамотність: Основи інвестування</h1>
+  <header class="article-header">
+    <h1>Фінансова свобода: як досягти стабільності</h1>
   </header>
-  <main>
-    <article>
-      <img src="https://images.unsplash.com/photo-1612832021100-5f8b9a2d9f87" alt="Інвестування">
-      <p>
-        Інвестування — це процес розподілу коштів у різні фінансові інструменти або активи з метою отримання прибутку. 
-        Найважливіше — мати стратегію та дисципліну.
-      </p>
-      <h2>Чому важливо інвестувати?</h2>
-      <ul>
-        <li>Захист від інфляції</li>
-        <li>Створення пасивного доходу</li>
-        <li>Фінансова незалежність</li>
-      </ul>
-      <h2>Поради для початківців:</h2>
-      <ol>
-        <li>Починайте з малого та інвестуйте регулярно</li>
-        <li>Диверсифікуйте портфель</li>
-        <li>Вивчайте фінансові ринки</li>
-      </ol>
-      <p>
-        Головне — почати. Час та дисципліна відіграють ключову роль у фінансовому зростанні.
-      </p>
-    </article>
+
+  <main class="article-content">
+    <img src="https://images.unsplash.com/photo-1556740738-b6a63e27c4df" alt="Фінанси">
+
+    <p>Фінансова свобода — це не лише великий дохід, а й уміння керувати своїми грошима. Справжня незалежність починається з грамотного підходу до планування та заощаджень.</p>
+
+    <p>Ось 4 ключові кроки:</p>
+    <ul>
+      <li><strong>Фінансова грамотність:</strong> читайте книги, статті, проходьте курси.</li>
+      <li><strong>Планування бюджету:</strong> слідкуйте за доходами та витратами.</li>
+      <li><strong>Інвестування:</strong> відкладайте 20% доходу на майбутнє.</li>
+      <li><strong>Резервний фонд:</strong> майте запас на 3–6 місяців життя.</li>
+    </ul>
+
+    <p>Дотримуючись цих простих правил, ви поступово досягнете фінансової незалежності та впевненості у завтрашньому дні.</p>
+
+    <a href="index.html" class="back-link">← Повернутись на головну</a>
   </main>
-  <footer>
-    <p><a href="index.html">← Назад на головну</a></p>
-  </footer>
 </body>
 </html>
