--- a/article2.html
+++ b/article2.html
@@ -5,36 +5,42 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Як планувати бюджет ефективно</title>
   <link rel="stylesheet" href="style.css">
+  <style>
+    .article-header {
+      background: linear-gradient(135deg, #28a745, #85d06a);
+      color: white;
+      padding: 60px 20px;
+      text-align: center;
+    }
+    .article-content {
+      max-width: 900px;
+      margin: 40px auto;
+      padding: 0 20px;
+      line-height: 1.8;
+      font-size: 1.1rem;
+      color: #333;
+    }
+    .article-content img {
+      width: 100%;
+      border-radius: 12px;
+      margin: 20px 0;
+    }
+    .back-link { text-align:center; display:block; margin-top:40px; color:#28a745; }
+  </style>
 </head>
 <body>
-  <header>
+  <header class="article-header">
     <h1>Як планувати бюджет ефективно</h1>
   </header>
-  <main>
-    <article>
-      <img src="https://images.unsplash.com/photo-1581092334504-ef62d2aa0c49" alt="Планування бюджету">
-      <p>
-        Планування бюджету — це основа фінансової стабільності. Воно дозволяє контролювати витрати, накопичувати кошти та уникати боргів.
-      </p>
-      <h2>Ключові поради:</h2>
-      <ul>
-        <li>Ведіть облік усіх доходів і витрат</li>
-        <li>Виділяйте частину коштів на заощадження</li>
-        <li>Встановлюйте фінансові цілі</li>
-      </ul>
-      <h2>50/30/20 правило</h2>
-      <p>
-        Розподіляйте бюджет так:
-      </p>
-      <ol>
-        <li>50% — необхідні витрати</li>
-        <li>30% — бажані покупки</li>
-        <li>20% — заощадження та інвестиції</li>
-      </ol>
-    </article>
+  <main class="article-content">
+    <img src="https://images.unsplash.com/photo-1567427017947-545c5f8d16ad" alt="Планування бюджету">
+    <p>Планування бюджету — це основа фінансової стабільності. Складіть список доходів і витрат, розділіть їх на категорії та визначте пріоритети.</p>
+    <ul>
+      <li>Використовуйте метод 50/30/20 (50% потреби, 30% бажання, 20% заощадження).</li>
+      <li>Ведіть фінансовий щоденник чи використовуйте додатки для обліку.</li>
+      <li>Регулярно аналізуйте витрати та оптимізуйте бюджет.</li>
+    </ul>
+    <a href="index.html" class="back-link">← Повернутись на головну</a>
   </main>
-  <footer>
-    <p><a href="index.html">← Назад на головну</a></p>
-  </footer>
 </body>
 </html>
