--- a/article3.html
+++ b/article3.html
@@ -3,28 +3,44 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Поради для початківців в інвестуванні</title>
+  <title>Інвестування для початківців</title>
   <link rel="stylesheet" href="style.css">
+  <style>
+    .article-header {
+      background: linear-gradient(135deg, #ff7f50, #ffb347);
+      color: white;
+      padding: 60px 20px;
+      text-align: center;
+    }
+    .article-content {
+      max-width: 900px;
+      margin: 40px auto;
+      padding: 0 20px;
+      line-height: 1.8;
+      font-size: 1.1rem;
+      color: #333;
+    }
+    .article-content img {
+      width: 100%;
+      border-radius: 12px;
+      margin: 20px 0;
+    }
+    .back-link { text-align:center; display:block; margin-top:40px; color:#ff7f50; }
+  </style>
 </head>
 <body>
-  <header>
-    <h1>Поради для початківців в інвестуванні</h1>
+  <header class="article-header">
+    <h1>Інвестування для початківців</h1>
   </header>
-  <main>
-    <article>
-      <img src="https://images.unsplash.com/photo-1642002235815-1fca1b3e4aa4" alt="Інвестиції">
-      <p>
-        Інвестування — це ключ до довгострокового фінансового успіху.  
-        Почніть з малого: відкрийте брокерський рахунок, вивчайте базові принципи інвестування.  
-        Не вкладайте всі кошти в один актив, розподіляйте ризики між акціями, облігаціями та фондами.
-      </p>
-      <p>
-        Важливо інвестувати регулярно — навіть невеликі суми принесуть значний результат завдяки складним відсоткам.
-      </p>
-    </article>
+  <main class="article-content">
+    <img src="https://images.unsplash.com/photo-1542228262-3d663b30659b" alt="Інвестування">
+    <p>Інвестування — це спосіб збільшити капітал. Почніть із малих сум, вивчайте ринки та розподіляйте активи.</p>
+    <ul>
+      <li>Інвестуйте лише ті кошти, які готові втратити.</li>
+      <li>Диверсифікуйте портфель (акції, облігації, нерухомість).</li>
+      <li>Вчіться читати фінансові звіти та аналізувати компанії.</li>
+    </ul>
+    <a href="index.html" class="back-link">← Повернутись на головну</a>
   </main>
-  <footer>
-    <p>© 2025 Фінансові поради</p>
-  </footer>
 </body>
 </html>
