--- a/article4.html
+++ b/article4.html
@@ -3,28 +3,44 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Фінансова подушка безпеки: з чого почати</title>
+  <title>Фінансова грамотність: чому це важливо</title>
   <link rel="stylesheet" href="style.css">
+  <style>
+    .article-header {
+      background: linear-gradient(135deg, #6a11cb, #2575fc);
+      color: white;
+      padding: 60px 20px;
+      text-align: center;
+    }
+    .article-content {
+      max-width: 900px;
+      margin: 40px auto;
+      padding: 0 20px;
+      line-height: 1.8;
+      font-size: 1.1rem;
+      color: #333;
+    }
+    .article-content img {
+      width: 100%;
+      border-radius: 12px;
+      margin: 20px 0;
+    }
+    .back-link { text-align:center; display:block; margin-top:40px; color:#6a11cb; }
+  </style>
 </head>
 <body>
-  <header>
-    <h1>Фінансова подушка безпеки: з чого почати</h1>
+  <header class="article-header">
+    <h1>Фінансова грамотність: чому це важливо</h1>
   </header>
-  <main>
-    <article>
-      <img src="https://images.unsplash.com/photo-1556742400-b5b7c5121f9a" alt="Подушка безпеки">
-      <p>
-        Подушка безпеки — це запас коштів на випадок непередбачуваних ситуацій:  
-        втрата роботи, поломка авто чи витрати на лікування.  
-      </p>
-      <p>
-        Рекомендовано накопичити від 3 до 6 місячних витрат.  
-        Відкрий окремий рахунок і регулярно поповнюй його навіть невеликими сумами.
-      </p>
-    </article>
+  <main class="article-content">
+    <img src="https://images.unsplash.com/photo-1508387023470-83e26f3c6aa0" alt="Фінансова грамотність">
+    <p>Фінансова грамотність — основа стабільності. Вона допомагає приймати правильні рішення щодо грошей, інвестицій і заощаджень.</p>
+    <ul>
+      <li>Читайте книги та статті про фінанси.</li>
+      <li>Вчіться працювати з бюджетом та боргами.</li>
+      <li>Вивчайте податкову систему та інвестиційні інструменти.</li>
+    </ul>
+    <a href="index.html" class="back-link">← Повернутись на головну</a>
   </main>
-  <footer>
-    <p>© 2025 Фінансові поради</p>
-  </footer>
 </body>
 </html>
