--- a/article5.html
+++ b/article5.html
@@ -3,27 +3,44 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Як уникнути фінансових помилок</title>
+  <title>Резервний фонд: чому він потрібен</title>
   <link rel="stylesheet" href="style.css">
+  <style>
+    .article-header {
+      background: linear-gradient(135deg, #ff416c, #ff4b2b);
+      color: white;
+      padding: 60px 20px;
+      text-align: center;
+    }
+    .article-content {
+      max-width: 900px;
+      margin: 40px auto;
+      padding: 0 20px;
+      line-height: 1.8;
+      font-size: 1.1rem;
+      color: #333;
+    }
+    .article-content img {
+      width: 100%;
+      border-radius: 12px;
+      margin: 20px 0;
+    }
+    .back-link { text-align:center; display:block; margin-top:40px; color:#ff416c; }
+  </style>
 </head>
 <body>
-  <header>
-    <h1>Як уникнути фінансових помилок</h1>
+  <header class="article-header">
+    <h1>Резервний фонд: чому він потрібен</h1>
   </header>
-  <main>
-    <article>
-      <img src="https://images.unsplash.com/photo-1605902711622-cfb43c4437b5" alt="Фінансові помилки">
-      <p>
-        Багато людей втрачають гроші через імпульсивні покупки, відсутність планування та інвестиції без аналізу.  
-      </p>
-      <p>
-        Щоб уникнути цього, створіть бюджет, визначайте фінансові цілі, накопичуйте резервний фонд і навчайтеся основам інвестування.  
-        Пам’ятайте: фінансова грамотність — ключ до стабільності.
-      </p>
-    </article>
+  <main class="article-content">
+    <img src="https://images.unsplash.com/photo-1604014237744-08f2fdbef6be" alt="Резервний фонд">
+    <p>Резервний фонд — це ваш фінансовий захист. Він дозволяє зберігати спокій у випадку непередбачених обставин.</p>
+    <ul>
+      <li>Майте запас на 3–6 місяців життя.</li>
+      <li>Тримайте гроші на надійному рахунку або депозиті.</li>
+      <li>Регулярно поповнюйте фонд, навіть невеликими сумами.</li>
+    </ul>
+    <a href="index.html" class="back-link">← Повернутись на головну</a>
   </main>
-  <footer>
-    <p>© 2025 Фінансові поради</p>
-  </footer>
 </body>
 </html>
