--- a/article2.html
+++ b/article2.html
@@ -5,42 +5,29 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Як планувати бюджет ефективно</title>
   <link rel="stylesheet" href="style.css">
-  <style>
-    .article-header {
-      background: linear-gradient(135deg, #28a745, #85d06a);
-      color: white;
-      padding: 60px 20px;
-      text-align: center;
-    }
-    .article-content {
-      max-width: 900px;
-      margin: 40px auto;
-      padding: 0 20px;
-      line-height: 1.8;
-      font-size: 1.1rem;
-      color: #333;
-    }
-    .article-content img {
-      width: 100%;
-      border-radius: 12px;
-      margin: 20px 0;
-    }
-    .back-link { text-align:center; display:block; margin-top:40px; color:#28a745; }
-  </style>
 </head>
 <body>
-  <header class="article-header">
-    <h1>Як планувати бюджет ефективно</h1>
-  </header>
-  <main class="article-content">
-    <img src="https://images.unsplash.com/photo-1567427017947-545c5f8d16ad" alt="Планування бюджету">
-    <p>Планування бюджету — це основа фінансової стабільності. Складіть список доходів і витрат, розділіть їх на категорії та визначте пріоритети.</p>
-    <ul>
-      <li>Використовуйте метод 50/30/20 (50% потреби, 30% бажання, 20% заощадження).</li>
-      <li>Ведіть фінансовий щоденник чи використовуйте додатки для обліку.</li>
-      <li>Регулярно аналізуйте витрати та оптимізуйте бюджет.</li>
-    </ul>
-    <a href="index.html" class="back-link">← Повернутись на головну</a>
-  </main>
+  <div class="container">
+    <header>
+      <h1>Як планувати бюджет ефективно</h1>
+      <nav>
+        <a href="index.html">🏠 На головну</a>
+      </nav>
+    </header>
+
+    <main>
+      <img src="https://images.unsplash.com/photo-1567427017947-545c5f8d16ad" alt="Бюджет">
+      <article>
+        <p>Ефективне планування бюджету — це ключ до фінансової стабільності. Воно допомагає розуміти свої доходи та витрати, уникати боргів і накопичувати кошти.</p>
+        <ul>
+          <li>📌 Створіть список усіх доходів і витрат.</li>
+          <li>💡 Розділіть витрати на необхідні та другорядні.</li>
+          <li>📊 Встановіть ліміти на кожну категорію витрат.</li>
+          <li>💰 Відкладай щонайменше 20% доходу щомісяця.</li>
+        </ul>
+        <p>Планування бюджету дозволить вам контролювати фінанси та впевнено рухатись до своїх цілей.</p>
+      </article>
+    </main>
+  </div>
 </body>
 </html>
