--- a/article3.html
+++ b/article3.html
@@ -3,44 +3,31 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Інвестування для початківців</title>
+  <title>Основи інвестування для початківців</title>
   <link rel="stylesheet" href="style.css">
-  <style>
-    .article-header {
-      background: linear-gradient(135deg, #ff7f50, #ffb347);
-      color: white;
-      padding: 60px 20px;
-      text-align: center;
-    }
-    .article-content {
-      max-width: 900px;
-      margin: 40px auto;
-      padding: 0 20px;
-      line-height: 1.8;
-      font-size: 1.1rem;
-      color: #333;
-    }
-    .article-content img {
-      width: 100%;
-      border-radius: 12px;
-      margin: 20px 0;
-    }
-    .back-link { text-align:center; display:block; margin-top:40px; color:#ff7f50; }
-  </style>
 </head>
 <body>
-  <header class="article-header">
-    <h1>Інвестування для початківців</h1>
-  </header>
-  <main class="article-content">
-    <img src="https://images.unsplash.com/photo-1542228262-3d663b30659b" alt="Інвестування">
-    <p>Інвестування — це спосіб збільшити капітал. Почніть із малих сум, вивчайте ринки та розподіляйте активи.</p>
-    <ul>
-      <li>Інвестуйте лише ті кошти, які готові втратити.</li>
-      <li>Диверсифікуйте портфель (акції, облігації, нерухомість).</li>
-      <li>Вчіться читати фінансові звіти та аналізувати компанії.</li>
-    </ul>
-    <a href="index.html" class="back-link">← Повернутись на головну</a>
-  </main>
+  <div class="container">
+    <header>
+      <h1>Основи інвестування для початківців</h1>
+      <nav>
+        <a href="index.html">🏠 На головну</a>
+      </nav>
+    </header>
+
+    <main>
+      <img src="https://images.unsplash.com/photo-1611971261370-6b1f6f8e9a4d" alt="Інвестиції">
+      <article>
+        <p>Інвестування — це спосіб збільшення капіталу та створення пасивного доходу. Навіть невеликі інвестиції можуть принести користь у довгостроковій перспективі.</p>
+        <ul>
+          <li>📈 Почніть з депозитів та облігацій для безпечних інвестицій.</li>
+          <li>💹 Вивчайте фондовий ринок та ETF.</li>
+          <li>🏠 Розгляньте нерухомість як інструмент для пасивного доходу.</li>
+          <li>🎯 Інвестуйте регулярно та на довгострокову перспективу.</li>
+        </ul>
+        <p>Ключ до успіху — дисципліна та постійне навчання у світі фінансів.</p>
+      </article>
+    </main>
+  </div>
 </body>
 </html>
