--- a/article4.html
+++ b/article4.html
@@ -3,44 +3,31 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Фінансова грамотність: чому це важливо</title>
+  <title>Фінансова подушка: Навіщо та як створити</title>
   <link rel="stylesheet" href="style.css">
-  <style>
-    .article-header {
-      background: linear-gradient(135deg, #6a11cb, #2575fc);
-      color: white;
-      padding: 60px 20px;
-      text-align: center;
-    }
-    .article-content {
-      max-width: 900px;
-      margin: 40px auto;
-      padding: 0 20px;
-      line-height: 1.8;
-      font-size: 1.1rem;
-      color: #333;
-    }
-    .article-content img {
-      width: 100%;
-      border-radius: 12px;
-      margin: 20px 0;
-    }
-    .back-link { text-align:center; display:block; margin-top:40px; color:#6a11cb; }
-  </style>
 </head>
 <body>
-  <header class="article-header">
-    <h1>Фінансова грамотність: чому це важливо</h1>
-  </header>
-  <main class="article-content">
-    <img src="https://images.unsplash.com/photo-1508387023470-83e26f3c6aa0" alt="Фінансова грамотність">
-    <p>Фінансова грамотність — основа стабільності. Вона допомагає приймати правильні рішення щодо грошей, інвестицій і заощаджень.</p>
-    <ul>
-      <li>Читайте книги та статті про фінанси.</li>
-      <li>Вчіться працювати з бюджетом та боргами.</li>
-      <li>Вивчайте податкову систему та інвестиційні інструменти.</li>
-    </ul>
-    <a href="index.html" class="back-link">← Повернутись на головну</a>
-  </main>
+  <div class="container">
+    <header>
+      <h1>Фінансова подушка: Навіщо та як створити</h1>
+      <nav>
+        <a href="index.html">🏠 На головну</a>
+      </nav>
+    </header>
+
+    <main>
+      <img src="https://images.unsplash.com/photo-1553729459-efe14ef6055d" alt="Фінансова подушка">
+      <article>
+        <p>Фінансова подушка — це резерв коштів на випадок непередбачуваних ситуацій: втрати роботи, поломки авто чи лікування.</p>
+        <ul>
+          <li>💵 Мета: накопичити суму на 3–6 місяців життя.</li>
+          <li>🏦 Зберігайте кошти на окремому рахунку або депозиті.</li>
+          <li>📅 Поповнюйте подушку регулярно, навіть невеликими сумами.</li>
+          <li>🔒 Не витрачайте ці гроші без критичної потреби.</li>
+        </ul>
+        <p>Фінансова подушка забезпечує спокій та впевненість у майбутньому.</p>
+      </article>
+    </main>
+  </div>
 </body>
 </html>
