--- a/article5.html
+++ b/article5.html
@@ -3,44 +3,31 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Резервний фонд: чому він потрібен</title>
+  <title>Як позбутися боргів та кредитів</title>
   <link rel="stylesheet" href="style.css">
-  <style>
-    .article-header {
-      background: linear-gradient(135deg, #ff416c, #ff4b2b);
-      color: white;
-      padding: 60px 20px;
-      text-align: center;
-    }
-    .article-content {
-      max-width: 900px;
-      margin: 40px auto;
-      padding: 0 20px;
-      line-height: 1.8;
-      font-size: 1.1rem;
-      color: #333;
-    }
-    .article-content img {
-      width: 100%;
-      border-radius: 12px;
-      margin: 20px 0;
-    }
-    .back-link { text-align:center; display:block; margin-top:40px; color:#ff416c; }
-  </style>
 </head>
 <body>
-  <header class="article-header">
-    <h1>Резервний фонд: чому він потрібен</h1>
-  </header>
-  <main class="article-content">
-    <img src="https://images.unsplash.com/photo-1604014237744-08f2fdbef6be" alt="Резервний фонд">
-    <p>Резервний фонд — це ваш фінансовий захист. Він дозволяє зберігати спокій у випадку непередбачених обставин.</p>
-    <ul>
-      <li>Майте запас на 3–6 місяців життя.</li>
-      <li>Тримайте гроші на надійному рахунку або депозиті.</li>
-      <li>Регулярно поповнюйте фонд, навіть невеликими сумами.</li>
-    </ul>
-    <a href="index.html" class="back-link">← Повернутись на головну</a>
-  </main>
+  <div class="container">
+    <header>
+      <h1>Як позбутися боргів та кредитів</h1>
+      <nav>
+        <a href="index.html">🏠 На головну</a>
+      </nav>
+    </header>
+
+    <main>
+      <img src="https://images.unsplash.com/photo-1607083206876-4bdbaf9829a4" alt="Борги">
+      <article>
+        <p>Борги можуть стати тягарем для вашого бюджету. Грамотний підхід допоможе звільнитися від кредитів швидше.</p>
+        <ul>
+          <li>📋 Складіть список усіх боргів та процентних ставок.</li>
+          <li>🎯 Погашайте найвищі відсотки першими.</li>
+          <li>💳 Уникайте нових кредитів, поки не закриєте старі.</li>
+          <li>📊 Розробіть фінансовий план і дотримуйтесь його.</li>
+        </ul>
+        <p>Правильна стратегія допоможе позбутися боргів і почати інвестувати у своє майбутнє.</p>
+      </article>
+    </main>
+  </div>
 </body>
 </html>
