--- a/index.html
+++ b/index.html
@@ -3,126 +3,54 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Фінансовий блог</title>
+  <title>Фінансові поради</title>
   <link rel="stylesheet" href="style.css">
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      background: #f9f9f9;
-      color: #333;
-    }
-    header {
-      background: linear-gradient(135deg, #1d976c, #93f9b9);
-      color: white;
-      padding: 50px 20px;
-      text-align: center;
-    }
-    header h1 {
-      font-size: 2.5rem;
-      margin: 0;
-    }
-    .container {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-      gap: 20px;
-      padding: 40px;
-      max-width: 1200px;
-      margin: auto;
-    }
-    .card {
-      background: white;
-      border-radius: 10px;
-      overflow: hidden;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
-      transition: transform 0.2s ease-in-out;
-    }
-    .card:hover {
-      transform: scale(1.03);
-    }
-    .card img {
-      width: 100%;
-      height: 200px;
-      object-fit: cover;
-    }
-    .card-content {
-      padding: 20px;
-    }
-    .card-content h2 {
-      margin: 0 0 10px;
-      font-size: 1.3rem;
-    }
-    .card-content p {
-      font-size: 1rem;
-      color: #555;
-    }
-    .card-content a {
-      display: inline-block;
-      margin-top: 10px;
-      padding: 10px 15px;
-      background: #1d976c;
-      color: white;
-      border-radius: 5px;
-      text-decoration: none;
-      font-weight: bold;
-      transition: background 0.3s ease;
-    }
-    .card-content a:hover {
-      background: #159957;
-    }
-  </style>
 </head>
 <body>
-  <header>
-    <h1>Фінансовий блог</h1>
-    <p>Поради з інвестування, економії та фінансової грамотності</p>
-  </header>
+  <div class="container">
+    <header>
+      <h1>Фінансові поради</h1>
+      <p>Корисні статті для розвитку фінансової грамотності</p>
+    </header>
 
-  <main class="container">
-    <div class="card">
-      <img src="https://images.unsplash.com/photo-1623887466924-5bbfcd70b2f4" alt="Фінансова свобода">
-      <div class="card-content">
-        <h2>Фінансова свобода: як досягти стабільності</h2>
-        <p>Навчіться керувати бюджетом і досягати фінансової незалежності.</p>
-        <a href="article1.html">Читати</a>
-      </div>
-    </div>
+    <main>
+      <section class="articles">
+        <article>
+          <img src="https://images.unsplash.com/photo-1605902711622-cfb43c4437b5" alt="Фінансова грамотність">
+          <h2>Фінансова грамотність</h2>
+          <p>Навчіться ефективно керувати власними фінансами та досягайте стабільності.</p>
+          <a href="article1.html" class="btn">Читати</a>
+        </article>
 
-    <div class="card">
-      <img src="https://images.unsplash.com/photo-1567427017947-545c5f8d16ad" alt="Планування бюджету">
-      <div class="card-content">
-        <h2>Як планувати бюджет ефективно</h2>
-        <p>Поради для тих, хто хоче контролювати витрати та збільшити заощадження.</p>
-        <a href="article2.html">Читати</a>
-      </div>
-    </div>
+        <article>
+          <img src="https://images.unsplash.com/photo-1522202176988-66273c2fd55f" alt="Планування бюджету">
+          <h2>Як планувати бюджет ефективно</h2>
+          <p>Поради для тих, хто хоче контролювати витрати та збільшити заощадження.</p>
+          <a href="article2.html" class="btn">Читати</a>
+        </article>
 
-    <div class="card">
-      <img src="https://images.unsplash.com/photo-1542228262-3d663b30659b" alt="Інвестування">
-      <div class="card-content">
-        <h2>Інвестування для початківців</h2>
-        <p>Як почати інвестувати і не втратити гроші.</p>
-        <a href="article3.html">Читати</a>
-      </div>
-    </div>
+        <article>
+          <img src="https://images.unsplash.com/photo-1604014237744-0d7b4eec91e5" alt="Інвестування">
+          <h2>Інвестування для початківців</h2>
+          <p>З чого почати інвестування та як уникнути ризиків на старті.</p>
+          <a href="article3.html" class="btn">Читати</a>
+        </article>
 
-    <div class="card">
-      <img src="https://images.unsplash.com/photo-1508387023470-83e26f3c6aa0" alt="Фінансова грамотність">
-      <div class="card-content">
-        <h2>Фінансова грамотність</h2>
-        <p>Основи фінансів для кожного, хто хоче жити впевнено.</p>
-        <a href="article4.html">Читати</a>
-      </div>
-    </div>
+        <article>
+          <img src="https://images.unsplash.com/photo-1522202176988-66273c2fd55f" alt="Пасивний дохід">
+          <h2>Створення пасивного доходу</h2>
+          <p>Джерела пасивного доходу та як їх побудувати.</p>
+          <a href="article4.html" class="btn">Читати</a>
+        </article>
 
-    <div class="card">
-      <img src="https://images.unsplash.com/photo-1604014237744-08f2fdbef6be" alt="Резервний фонд">
-      <div class="card-content">
-        <h2>Резервний фонд</h2>
-        <p>Як створити фінансовий захист на випадок кризи.</p>
-        <a href="article5.html">Читати</a>
-      </div>
-    </div>
-  </main>
+        <article>
+          <img src="https://images.unsplash.com/photo-1508385082359-f38ae991e8f2" alt="Економія грошей">
+          <h2>Топ поради для економії грошей</h2>
+          <p>Прості та дієві поради для оптимізації витрат.</p>
+          <a href="article5.html" class="btn">Читати</a>
+        </article>
+      </section>
+    </main>
+  </div>
 </body>
 </html>
