--- a/article2.html
+++ b/article2.html
@@ -10,22 +10,18 @@
   <div class="container">
     <header>
       <h1>Як планувати бюджет ефективно</h1>
-      <nav>
-        <a href="index.html">🏠 На головну</a>
-      </nav>
+      <nav><a href="index.html">🏠 На головну</a></nav>
     </header>
 
     <main>
-      <img src="https://images.unsplash.com/photo-1567427017947-545c5f8d16ad" alt="Бюджет">
+      <img src="https://images.unsplash.com/photo-1522202176988-66273c2fd55f" alt="Планування бюджету">
       <article>
-        <p>Ефективне планування бюджету — це ключ до фінансової стабільності. Воно допомагає розуміти свої доходи та витрати, уникати боргів і накопичувати кошти.</p>
+        <p>Ефективне планування бюджету — ключ до фінансової стабільності. Воно допомагає уникнути боргів та накопичити гроші.</p>
         <ul>
-          <li>📌 Створіть список усіх доходів і витрат.</li>
-          <li>💡 Розділіть витрати на необхідні та другорядні.</li>
-          <li>📊 Встановіть ліміти на кожну категорію витрат.</li>
-          <li>💰 Відкладай щонайменше 20% доходу щомісяця.</li>
+          <li>✍️ Запишіть усі доходи та витрати.</li>
+          <li>🎯 Визначте фінансові цілі.</li>
+          <li>💡 Використовуйте правило 50/30/20 для розподілу бюджету.</li>
         </ul>
-        <p>Планування бюджету дозволить вам контролювати фінанси та впевнено рухатись до своїх цілей.</p>
       </article>
     </main>
   </div>
