--- a/article3.html
+++ b/article3.html
@@ -3,29 +3,25 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Основи інвестування для початківців</title>
+  <title>Інвестування для початківців</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="container">
     <header>
-      <h1>Основи інвестування для початківців</h1>
-      <nav>
-        <a href="index.html">🏠 На головну</a>
-      </nav>
+      <h1>Інвестування для початківців</h1>
+      <nav><a href="index.html">🏠 На головну</a></nav>
     </header>
 
     <main>
-      <img src="https://images.unsplash.com/photo-1611971261370-6b1f6f8e9a4d" alt="Інвестиції">
+      <img src="https://images.unsplash.com/photo-1604014237744-0d7b4eec91e5" alt="Інвестування">
       <article>
-        <p>Інвестування — це спосіб збільшення капіталу та створення пасивного доходу. Навіть невеликі інвестиції можуть принести користь у довгостроковій перспективі.</p>
+        <p>Інвестування — чудовий спосіб накопичення капіталу. Почніть з малого та вивчайте ринок.</p>
         <ul>
-          <li>📈 Почніть з депозитів та облігацій для безпечних інвестицій.</li>
-          <li>💹 Вивчайте фондовий ринок та ETF.</li>
-          <li>🏠 Розгляньте нерухомість як інструмент для пасивного доходу.</li>
-          <li>🎯 Інвестуйте регулярно та на довгострокову перспективу.</li>
+          <li>📊 Почніть з акцій та облігацій.</li>
+          <li>🏦 Диверсифікуйте портфель.</li>
+          <li>📖 Вчіться постійно: фінансові книги, курси, новини.</li>
         </ul>
-        <p>Ключ до успіху — дисципліна та постійне навчання у світі фінансів.</p>
       </article>
     </main>
   </div>
