--- a/article4.html
+++ b/article4.html
@@ -3,29 +3,25 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Фінансова подушка: Навіщо та як створити</title>
+  <title>Створення пасивного доходу</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="container">
     <header>
-      <h1>Фінансова подушка: Навіщо та як створити</h1>
-      <nav>
-        <a href="index.html">🏠 На головну</a>
-      </nav>
+      <h1>Створення пасивного доходу</h1>
+      <nav><a href="index.html">🏠 На головну</a></nav>
     </header>
 
     <main>
-      <img src="https://images.unsplash.com/photo-1553729459-efe14ef6055d" alt="Фінансова подушка">
+      <img src="https://images.unsplash.com/photo-1522202176988-66273c2fd55f" alt="Пасивний дохід">
       <article>
-        <p>Фінансова подушка — це резерв коштів на випадок непередбачуваних ситуацій: втрати роботи, поломки авто чи лікування.</p>
+        <p>Пасивний дохід дозволяє заробляти навіть без активної роботи.</p>
         <ul>
-          <li>💵 Мета: накопичити суму на 3–6 місяців життя.</li>
-          <li>🏦 Зберігайте кошти на окремому рахунку або депозиті.</li>
-          <li>📅 Поповнюйте подушку регулярно, навіть невеликими сумами.</li>
-          <li>🔒 Не витрачайте ці гроші без критичної потреби.</li>
+          <li>🏠 Інвестиції в нерухомість.</li>
+          <li>💻 Онлайн-бізнес.</li>
+          <li>💡 Дивіденди від акцій.</li>
         </ul>
-        <p>Фінансова подушка забезпечує спокій та впевненість у майбутньому.</p>
       </article>
     </main>
   </div>
