--- a/article5.html
+++ b/article5.html
@@ -3,29 +3,25 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Як позбутися боргів та кредитів</title>
+  <title>Топ поради для економії грошей</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="container">
     <header>
-      <h1>Як позбутися боргів та кредитів</h1>
-      <nav>
-        <a href="index.html">🏠 На головну</a>
-      </nav>
+      <h1>Топ поради для економії грошей</h1>
+      <nav><a href="index.html">🏠 На головну</a></nav>
     </header>
 
     <main>
-      <img src="https://images.unsplash.com/photo-1607083206876-4bdbaf9829a4" alt="Борги">
+      <img src="https://images.unsplash.com/photo-1508385082359-f38ae991e8f2" alt="Економія грошей">
       <article>
-        <p>Борги можуть стати тягарем для вашого бюджету. Грамотний підхід допоможе звільнитися від кредитів швидше.</p>
+        <p>Економія грошей — це не обмеження, а розумне використання ресурсів.</p>
         <ul>
-          <li>📋 Складіть список усіх боргів та процентних ставок.</li>
-          <li>🎯 Погашайте найвищі відсотки першими.</li>
-          <li>💳 Уникайте нових кредитів, поки не закриєте старі.</li>
-          <li>📊 Розробіть фінансовий план і дотримуйтесь його.</li>
+          <li>🛒 Купуйте за списком.</li>
+          <li>💳 Уникайте імпульсивних покупок.</li>
+          <li>📈 Аналізуйте витрати кожного місяця.</li>
         </ul>
-        <p>Правильна стратегія допоможе позбутися боргів і почати інвестувати у своє майбутнє.</p>
       </article>
     </main>
   </div>
