--- a/article2.html
+++ b/article2.html
@@ -4,17 +4,19 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Як планувати бюджет ефективно</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css?v=2">
 </head>
 <body>
   <div class="container">
     <header>
       <h1>Як планувати бюджет ефективно</h1>
-      <nav><a href="index.html">🏠 На головну</a></nav>
+      <nav>
+        <a href="index.html">🏠 На головну</a>
+      </nav>
     </header>
 
     <main>
-      <img src="https://images.unsplash.com/photo-1522202176988-66273c2fd55f" alt="Планування бюджету">
+      <img src="https://images.unsplash.com/photo-1581090700227-4c4f50b1d9d5" alt="Бюджет">
       <article>
         <p>Ефективне планування бюджету — ключ до фінансової стабільності. Воно допомагає уникнути боргів та накопичити гроші.</p>
         <ul>
@@ -22,6 +24,7 @@
           <li>🎯 Визначте фінансові цілі.</li>
           <li>💡 Використовуйте правило 50/30/20 для розподілу бюджету.</li>
         </ul>
+        <p>Планування бюджету дозволяє вам контролювати фінанси та впевнено рухатись до своїх цілей.</p>
       </article>
     </main>
   </div>
