--- a/article3.html
+++ b/article3.html
@@ -4,24 +4,27 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Інвестування для початківців</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css?v=2">
 </head>
 <body>
   <div class="container">
     <header>
       <h1>Інвестування для початківців</h1>
-      <nav><a href="index.html">🏠 На головну</a></nav>
+      <nav>
+        <a href="index.html">🏠 На головну</a>
+      </nav>
     </header>
 
     <main>
-      <img src="https://images.unsplash.com/photo-1604014237744-0d7b4eec91e5" alt="Інвестування">
+      <img src="https://images.unsplash.com/photo-1649972904349-432c86a20b59" alt="Інвестиції">
       <article>
-        <p>Інвестування — чудовий спосіб накопичення капіталу. Почніть з малого та вивчайте ринок.</p>
+        <p>Інвестування допомагає створювати пасивний дохід та накопичувати капітал.</p>
         <ul>
-          <li>📊 Почніть з акцій та облігацій.</li>
-          <li>🏦 Диверсифікуйте портфель.</li>
-          <li>📖 Вчіться постійно: фінансові книги, курси, новини.</li>
+          <li>📖 Вивчайте ринок та інструменти інвестування.</li>
+          <li>📈 Починайте з малих сум, щоб знизити ризики.</li>
+          <li>💼 Диверсифікуйте портфель інвестицій.</li>
         </ul>
+        <p>Кожен може почати інвестувати, навіть маючи невеликий капітал.</p>
       </article>
     </main>
   </div>
