--- a/article4.html
+++ b/article4.html
@@ -3,25 +3,28 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Створення пасивного доходу</title>
-  <link rel="stylesheet" href="style.css">
+  <title>Створення фінансової подушки</title>
+  <link rel="stylesheet" href="style.css?v=2">
 </head>
 <body>
   <div class="container">
     <header>
-      <h1>Створення пасивного доходу</h1>
-      <nav><a href="index.html">🏠 На головну</a></nav>
+      <h1>Створення фінансової подушки</h1>
+      <nav>
+        <a href="index.html">🏠 На головну</a>
+      </nav>
     </header>
 
     <main>
-      <img src="https://images.unsplash.com/photo-1522202176988-66273c2fd55f" alt="Пасивний дохід">
+      <img src="https://images.unsplash.com/photo-1620321682843-78c70a0a5c79" alt="Фінансова подушка">
       <article>
-        <p>Пасивний дохід дозволяє заробляти навіть без активної роботи.</p>
+        <p>Фінансова подушка — це резерв коштів на непередбачувані ситуації.</p>
         <ul>
-          <li>🏠 Інвестиції в нерухомість.</li>
-          <li>💻 Онлайн-бізнес.</li>
-          <li>💡 Дивіденди від акцій.</li>
+          <li>💵 Відкладай мінімум 10% від доходу щомісяця.</li>
+          <li>🏦 Тримай гроші на окремому рахунку.</li>
+          <li>📆 Мета — накопичити суму на 3-6 місяців витрат.</li>
         </ul>
+        <p>Наявність подушки безпеки забезпечить спокій у кризових ситуаціях.</p>
       </article>
     </main>
   </div>
