--- a/article5.html
+++ b/article5.html
@@ -3,25 +3,28 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Топ поради для економії грошей</title>
-  <link rel="stylesheet" href="style.css">
+  <title>Як уникнути фінансових боргів</title>
+  <link rel="stylesheet" href="style.css?v=2">
 </head>
 <body>
   <div class="container">
     <header>
-      <h1>Топ поради для економії грошей</h1>
-      <nav><a href="index.html">🏠 На головну</a></nav>
+      <h1>Як уникнути фінансових боргів</h1>
+      <nav>
+        <a href="index.html">🏠 На головну</a>
+      </nav>
     </header>
 
     <main>
-      <img src="https://images.unsplash.com/photo-1508385082359-f38ae991e8f2" alt="Економія грошей">
+      <img src="https://images.unsplash.com/photo-1605902711622-cfb43c4437b5" alt="Фінансові борги">
       <article>
-        <p>Економія грошей — це не обмеження, а розумне використання ресурсів.</p>
+        <p>Борги можуть призвести до фінансових труднощів, тому важливо вчасно вживати заходів.</p>
         <ul>
-          <li>🛒 Купуйте за списком.</li>
-          <li>💳 Уникайте імпульсивних покупок.</li>
-          <li>📈 Аналізуйте витрати кожного місяця.</li>
+          <li>📜 Складай план погашення боргів.</li>
+          <li>💳 Уникай використання кредитів для повсякденних витрат.</li>
+          <li>📝 Веди облік своїх фінансів.</li>
         </ul>
+        <p>Фінансова дисципліна допоможе уникнути нових боргів і швидше вийти з існуючих.</p>
       </article>
     </main>
   </div>
