--- a/article1.html
+++ b/article1.html
@@ -4,29 +4,24 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Фінансова грамотність</title>
-  <link rel="stylesheet" href="style.css?v=2">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="container">
     <header>
       <h1>Фінансова грамотність</h1>
-      <nav>
-        <a href="index.html">🏠 На головну</a>
-      </nav>
+      <nav><a href="index.html">🏠 На головну</a></nav>
     </header>
-
     <main>
-      <img src="https://images.unsplash.com/photo-1605902711622-cfb43c4437b5" alt="Фінанси">
       <article>
-        <p><strong>Фінансова грамотність</strong> — це основа стабільного та впевненого майбутнього. Люди, які розуміють, як працюють гроші, можуть ефективно керувати своїм бюджетом, уникати боргів та інвестувати у власний розвиток.</p>
-        <p>Ключові кроки для розвитку фінансової грамотності:</p>
+        <img src="https://images.unsplash.com/photo-1605902711622-cfb43c4437b5?ixlib=rb-4.0.3&auto=format&fit=crop&w=900&q=80" alt="Фінансова грамотність">
+        <p><strong>Фінансова грамотність</strong> — це вміння правильно керувати власними грошима. Людина, яка володіє цими знаннями, завжди знає, як уникнути боргів, створити фінансову подушку та інвестувати.</p>
         <ul>
-          <li>📚 Освіта: Читання книг та статей про особисті фінанси.</li>
-          <li>💰 Бюджетування: Створення та контроль власного бюджету.</li>
-          <li>📈 Інвестування: Навчання основам інвестицій та пасивного доходу.</li>
-          <li>🛡️ Фінансова подушка: Накопичення коштів на непередбачувані ситуації.</li>
+          <li>📚 Вивчай книги і статті про фінанси.</li>
+          <li>💳 Контролюй доходи та витрати щомісяця.</li>
+          <li>🏦 Створи резервний фонд на 3-6 місяців життя.</li>
+          <li>📈 Освой інвестування для створення пасивного доходу.</li>
         </ul>
-        <p>Фінансова грамотність допомагає не лише правильно витрачати гроші, а й будувати майбутнє на основі стабільності та впевненості.</p>
       </article>
     </main>
   </div>
