--- a/article2.html
+++ b/article2.html
@@ -4,27 +4,23 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Як планувати бюджет ефективно</title>
-  <link rel="stylesheet" href="style.css?v=2">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="container">
     <header>
       <h1>Як планувати бюджет ефективно</h1>
-      <nav>
-        <a href="index.html">🏠 На головну</a>
-      </nav>
+      <nav><a href="index.html">🏠 На головну</a></nav>
     </header>
-
     <main>
-      <img src="https://images.unsplash.com/photo-1581090700227-4c4f50b1d9d5" alt="Бюджет">
       <article>
-        <p>Ефективне планування бюджету — ключ до фінансової стабільності. Воно допомагає уникнути боргів та накопичити гроші.</p>
+        <img src="https://images.unsplash.com/photo-1554224155-8d04cb21cd6c?ixlib=rb-4.0.3&auto=format&fit=crop&w=900&q=80" alt="Планування бюджету">
+        <p>Бюджетування допомагає ефективно розпоряджатися грошима та уникати фінансових труднощів.</p>
         <ul>
-          <li>✍️ Запишіть усі доходи та витрати.</li>
-          <li>🎯 Визначте фінансові цілі.</li>
-          <li>💡 Використовуйте правило 50/30/20 для розподілу бюджету.</li>
+          <li>✍️ Записуйте всі доходи та витрати.</li>
+          <li>🎯 Встановіть фінансові цілі на рік.</li>
+          <li>💡 Використовуйте правило 50/30/20 для розподілу коштів.</li>
         </ul>
-        <p>Планування бюджету дозволяє вам контролювати фінанси та впевнено рухатись до своїх цілей.</p>
       </article>
     </main>
   </div>
